# Sorting_files_threads

./: pyproject.toml
sorting_files_threads/: main.py
